test/zinc_source/compile_errors/functions/06_named_builtin.zn
// expected-error: print\(\) does not accept named arguments
fn main() {
    print(value=1)
}
